fix: keep whitespace in inline code

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -72,6 +72,7 @@
     }
 
     counter-reset: line;
+    white-space: pre-wrap;
 
     span.line {
       &:before {
